--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,7 +6,7 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
+  /* --ifm-color-primary: #2e8555;
   --ifm-color-primary-dark: #29784c;
   --ifm-color-primary-darker: #277148;
   --ifm-color-primary-darkest: #205d3b;
@@ -14,17 +14,35 @@
   --ifm-color-primary-lighter: #359962;
   --ifm-color-primary-lightest: #3cad6e;
   --ifm-code-font-size: 95%;
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1); */
+
+  --ifm-color-primary: #663399;
+  --ifm-color-primary-dark: #5c2e8a;
+  --ifm-color-primary-darker: #572b82;
+  --ifm-color-primary-darkest: #47246b;
+  --ifm-color-primary-light: #7038a8;
+  --ifm-color-primary-lighter: #753bb0;
+  --ifm-color-primary-lightest: #8547c2;
+  --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
+[data-theme="dark"] {
+  /* --ifm-color-primary: #25c2a0;
   --ifm-color-primary-dark: #21af90;
   --ifm-color-primary-darker: #1fa588;
   --ifm-color-primary-darkest: #1a8870;
   --ifm-color-primary-light: #29d5b0;
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3); */
+
+  --ifm-color-primary: #61dafb;
+  --ifm-color-primary-dark: #3fd2fa;
+  --ifm-color-primary-darker: #2ecefa;
+  --ifm-color-primary-darkest: #06bcee;
+  --ifm-color-primary-light: #83e2fc;
+  --ifm-color-primary-lighter: #94e6fc;
+  --ifm-color-primary-lightest: #c7f2fe;
 }
